checkpolicy/tests/negative/dup_module.te
module dup_module 1.0;
module dup_module 1.0;

require {
	type foo_t;
}
